crates/reinhardt-pages/tests/ui/client_form/choices/fail/skip_serializing_deserialize_collision.stderr
error: ClientFormChoices serde alias `live` collides with an emitted choice value
 --> tests/ui/client_form/choices/fail/skip_serializing_deserialize_collision.rs:8:2
  |
8 |     Archived,
  |     ^^^^^^^^
